Since HAL doesn't take care of network shares, introduce a "Network Shares Only" mode in the fstab backend, and load it with HAL.

BUG:101731


svn path=/trunk/KDE/kdebase/kioslave/; revision=434569